
0.4.4 beta
* Add cli installer
* Added composer support for services

0.4.1 beta
* Added modal window to add or edit content at the frontend
* Improved extjs backend
* Added vcshook service to consume commit webhooks from github, googleproject
* Backend added page drag n drop reorder
* Using composer as dependency manager
* Improved tests

0.4 beta
* Added ExtJs based backend as default
* Removed htmlpurifier using now the html library of psx
* Using bootstrap.css instead of blueprintcss
* Changed service architecure files are now loaded directly from the service
  folder and not copied into amun
* Option to add a custom prefix for the table names
* Update content media upload
* Fixed oembed server

0.3.7 beta
* Pw complexity can now be set in the registry
* Added salt parameter to the config
* Updated sabredav library at webdav service
* Added user timezone handling
* Added hmtlpurifier custom injectors
* Updated htmlpurifier to 4.4.0
* Added login wrong attemp limitation
* Added amun base class wich contains information about the release and loads
  all necessary basic classes to run amun

0.3.6 beta
* Added amun workbench to admister amun online without using an 3rd party app
* Added tracker service
* Updated jquery
* Implement insert, update and delete limitations using captchas
* Added plugin service
* Improved css structure
* Add option to install service as tar archive

0.3.5 beta
* Improved and fixed activity message exchange of connected amun instances
* Implement basic stomp listener
* Fixed openid consumer and relying party
* Update stomp notifier
* Polish default template css

0.3.4 beta
* Added markdown support and insert help page on installation
* Added forum service
* Redesigned gadget system
* Improved page tree sort and reparent functions
* Improved service install system
* Added mail system to send template based plain text / html mails to users
* Fixed bugs in my service OpenId authentication

0.3.3 beta